--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <aside class="sidebar">
       <div class="widget">
         <h3 class="widget-title">プロフィール</h3>
-        <p class="profile-name">佐々木 勇瑠</p>
+        <p class="profile-name">takenoko</p>
         <p class="profile-text">東工大生。曲作りとドット絵とプログラミング。</p>
       </div>
 
