--- a/about.html
+++ b/about.html
@@ -58,12 +58,6 @@
     </div>
   </footer>
 
-  <button id="toTop" type="button" aria-label="ページの先頭へ">↑</button>
-  <script>
-    const toTop = document.getElementById("toTop");
-    toTop.addEventListener("click", () => {
-      window.scrollTo({ top: 0, behavior: "smooth" });
-    });
-  </script>
+<script src="main.js"></script>
 </body>
 </html>
