--- a/about.html
+++ b/about.html
@@ -28,25 +28,17 @@
 
       <div class="prose">
         <p>
-          このブログは、日々の雑記や制作ログ、勉強の記録をまとめるために作りました。
-        </p>
-
-        <p>
-          音楽制作、ドット絵、プログラミングなど、
-          興味のあることを気楽に書いていく予定です。
+          このブログは、日々の雑記などをまとめるために作りました。
         </p>
 
         <h3>運営者</h3>
         <p>
-          佐々木 勇瑠<br />
-          東工大生 / 作曲 / ドット絵 / プログラミング
+          たけのこ
         </p>
 
         <h3>このブログの方針</h3>
         <ul>
-          <li>自分のペースで更新</li>
-          <li>技術メモは後から見返せる形で</li>
-          <li>無理にバズらせない</li>
+          <li>できれば毎日、少なくとも二日に一回更新</li>
         </ul>
       </div>
     </article>
